PA_Education/TestMenifest/force-app/main/default/objects/EformsignEnvironment__c/EformsignEnvironment__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Eformsign Environment</label>
</CustomObject>