PA_Education/TestMenifest/force-app/main/default/objects/EformsignEnvironment__c/fields/ApiBaseUrl__c.field-meta.xml
<CustomField>
    <fullName>ApiBaseUrl__c</fullName>
    <label>Api Base Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>