PA_Education/TestMenifest/force-app/main/default/objects/EformsignEnvironment__c/fields/CompanyId__c.field-meta.xml
<CustomField>
    <fullName>CompanyId__c</fullName>
    <label>Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>