PA_Education/TestMenifest/force-app/main/default/objects/EformsignEnvironment__c/fields/Privatekey__c.field-meta.xml
<CustomField>
    <fullName>Privatekey__c</fullName>
    <label>Private key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>