PA_Education/TestMenifest/force-app/main/default/objects/EformsignEnvironment__c/fields/RepresentativeAdminEmail__c.field-meta.xml
<CustomField>
    <fullName>RepresentativeAdminEmail__c</fullName>
    <label>Representative Admin Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>